<resources>
    <string name="app_name">ElTablero</string>
    <string name="gameMode">Modo de juego</string>
    <string name="colors">Colores</string>
    <string name="numbers">Numeros</string>
    <string name="sound">Sonido</string>
    <string name="vibration">Vibracion</string>
    <string name="play">Jugar</string>
    <string name="opcionesJugador">Opciones</string>
    <string name="instrucciones">Instrucciones</string>
    <string name="sobre">Información</string>
    <string name="about">Info</string>
    <string name="como">Instrucciones</string>
    <string name="numFilas">Numero de Filas</string>
    <string name="numColumn">Numero de Columnas</string>
    <string name="numColor">Numero de Colores</string>
    <string name="instruccionesTexto">La meta de este juego consiste en hacer que todas las casillas tengan el mismo valor, ya sea en números o colores. Una vez conseguido esto usted habrá ganado.

        Para jugar tiene que pulsar las casillas las cuales van rotando en valor. En el caso de pulsar una casilla que no sea una esquina, esta pulsación también afectara a las casillas adyacentes y en el caso de estar la casilla pulsada en una esquina esta pulsación afectara también a las casillas que la rodean.</string>
    <string name="infoTexto">Esta aplicación ha sido desarrollada por Nicolás García Manrique miestras estudiaba en el I.E.S. Murgi.</string>
    <string name="contacto">Correo: nicogarcia.ng4@gmail.com</string>
    <string name="opciones">Opciones</string>
</resources>